<resources>
    <string name="app_name">Single Album</string>
    <string name="play">play</string>
    <string name="album">ALBUM</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="information">information</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="track_name">Track name</string>
    <string name="_0_00">0:00</string>
    <string name="info">%1$s  %2$s</string>
    <string name="track">%1$s. %2$s</string>
</resources>